crates/voom-cli/tests/snapshots/bundle_envelope__bundle_envelope__bundle_show_unknown_id_is_not_found.snap
---
source: crates/voom-cli/tests/bundle_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "bundle",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "bundle show: id=999 not found"
  }
}
